--- a/usage/video-editor/edit-background-music.mdx
+++ b/usage/video-editor/edit-background-music.mdx
@@ -2,3 +2,44 @@
 title: Chỉnh sửa nhạc nền
 description: "Hướng dẫn chỉnh sửa nhạc nền với Vipro Studio"
 ---
+
+Bạn có thể lựa chọn để tinh chỉnh nhạc nền của video bằng cách bấm vào nút có biểu tượng music ở menu bên trái của màn hình.
+
+<img
+  src='/images/usage/video-editor/background-music.jpg'
+  alt='Chọn nhạc nền'
+  className='rounded-lg'
+/>
+
+Tại đây, bạn có thể lựa chọn một nhạc nền bất kỳ cho video của mình. Bạn có thể:
+
+- Bấm nút Play để nghe thử nhạc nền
+- Bấm vào một nhạc nền để lựa chọn
+- Bấm thêm một lần nữa vào nhạc đã chọn để bỏ chọn
+
+Sau khi chọn một nhạc nền, nhạc được chọn sẽ thể hiện ở trên đầu của màn hình.
+
+<img
+  src='/images/usage/video-editor/background-music-selected.jpg'
+  alt='Nhạc nền đã chọn'
+  className='rounded-lg'
+/>
+
+Ngoài ra, bạn có thể tải lên nhạc nền tùy chỉnh bằng cách:
+
+1. Bấm vào nút `Tải lên nhạc tùy chỉnh`
+2. Chọn file nhạc từ máy tính của bạn
+
+<img
+  src='/images/usage/video-editor/background-music-add.jpg'
+  alt='Thêm nhạc nền'
+  className='rounded-lg'
+/>
+
+Để tìm kiếm nhạc nền phù hợp nhất, bạn có thể lọc danh sách nhạc theo các thể loại khác nhau.
+
+<img
+  src='/images/usage/video-editor/background-music-filter.jpg'
+  alt='Lọc nhạc nền'
+  className='rounded-lg'
+/>
