--- a/usage/video-editor/edit-background-music.mdx
+++ b/usage/video-editor/edit-background-music.mdx
@@ -43,3 +43,7 @@ Ngoài ra, bạn có thể tải lên nhạc nền tùy chỉnh bằng cách:
   alt='Lọc nhạc nền'
   className='rounded-lg'
 />
+
+## Lưu ý
+
+Những lựa chọn cài đặt cho nhạc nền của bạn sẽ được lưu tự động vào mẫu video mà bạn đã chọn ở bước đầu tiên khi tạo video. Nếu bạn tạo 1 video khác cũng lựa chọn mẫu video này, phần cài đặt này sẽ được lấy mặc định theo video gần nhất bạn đã tạo.
