--- a/usage/video-editor/edit-video-effect.mdx
+++ b/usage/video-editor/edit-video-effect.mdx
@@ -18,3 +18,7 @@ Tại đây bạn có thể lựa chọn bật hoặc tắt hiệu ứng chuyể
   alt='Hiệu ứng video đã chọn'
   className='rounded-lg'
 />
+
+## Lưu ý
+
+Những lựa chọn cài đặt cho hiệu ứng video của bạn sẽ được lưu tự động vào mẫu video mà bạn đã chọn ở bước đầu tiên khi tạo video. Nếu bạn tạo 1 video khác cũng lựa chọn mẫu video này, phần cài đặt này sẽ được lấy mặc định theo video gần nhất bạn đã tạo.
