--- a/usage/video-editor/regenerate-media.mdx
+++ b/usage/video-editor/regenerate-media.mdx
@@ -2,3 +2,21 @@
 title: Tạo lại media
 description: "Hướng dẫn tạo lại giọng đọc và hình ảnh với Vipro Studio"
 ---
+
+Nếu hình ảnh hoặc âm thanh trong video của bạn không được chất lượng, bạn có thể tạo lại media bằng cách bấm vào thanh Chapter timeline màu xanh dương bên dưới và chọn tạo lại giọng nói hoặc hình ảnh. Lưu ý rằng khi bạn tạo lại thì sẽ bị trừ lượng kim cương tương ứng với độ dài của nội dung.
+
+<img
+  src='/images/usage/video-editor/regenerate-media.jpg'
+  alt='Tạo lại media'
+  className='rounded-lg'
+/>
+
+Nếu lựa chọn `Tạo lại hình ảnh` 1 màn chọn phong cách hình ảnh sẽ hiển thị ra, cho phép bạn chọn lại phong cách hình ảnh cho phân cảnh đang chỉnh sửa. Phong cách hình ảnh sẽ chia làm nhiều thể loại, trong mỗi thể loại sẽ có nhiều phong cách khác nhau. VD: Thể loại là Cinematic có 2 phong cách là `Dramatic Lightning` và `Michael Bay`. Bạn có thể chọn lại thể loại bằng cách bấm vào nút `Phong cách` tương tự như mở cây thư mục trên máy tính. Sau khi chọn xong, bấm vào nút `Lưu` để bắt đầu tạo lại hình ảnh.
+
+<img
+  src='/images/usage/video-editor/regenerate-media-2.jpg'
+  alt='Tạo lại hình ảnh'
+  className='rounded-lg'
+/>
+
+Bạn có thể lựa chọn để tạo lại từng hình ảnh/ phân cảnh riêng biệt theo hướng dẫn ở phần [Chỉnh sửa phân cảnh](/usage/video-editor/edit-scene).
