--- a/usage/publish-video/publish-youtube.mdx
+++ b/usage/publish-video/publish-youtube.mdx
@@ -2,3 +2,87 @@
 title: Đăng video lên YouTube
 description: "Hướng dẫn đăng tải video lên YouTube với Vipro Studio"
 ---
+
+## Điều kiện
+
+- Bạn cần phải xuất video trước khi có thể đăng tải video lên YouTube.
+- Để tải video tự động lên YouTube, bạn cần phải sử dụng phiên bản máy tính (PC). Tải phiên bản máy tính tại [đây](https://vipro.studio/dashboard)
+
+## Đăng tải video lên YouTube trên phiên bản web
+
+Tuy không thể đăng tải tự động lên YouTube tại phiên bản web, bạn vẫn có thể chỉnh sửa nội dung video, sau đó tải video về máy và tải lên thủ công.
+
+Với Vipro, công việc chuẩn bị nội dung trên YouTube trở lên dễ dàng hơn bao giờ hết, khi mà chúng tôi đã sinh ra sẵn cho bạn các nội dung cần thiết như Tiêu đề video, Mô tả video, Từ khóa video, Hashtags, Thumbnail. Những nội dung này đã được tối ưu hóa SEO, search Keyword phù hợp với thuật toán của YouTube, để giúp cho video của bạn có thể dễ dàng được tìm kiếm và được xem nhiều hơn. Điều này giúp tiết kiệm cho bạn hàng giờ tìm hiểu và chuẩn bị nội dung.
+
+Nếu muốn bạn vẫn có thể điều chỉnh lại các nội dung này, bao gồm Tiêu đề, Mô tả, Từ khóa, Hashtags, Thumbnail, thời gian xuất bản video, chế độ hiển thị.
+
+Đọc hướng dẫn chỉnh sửa Thumbnail [tại đây](/usage/edit-video/thumbnail-editor)
+
+<img
+  src='/images/usage/publish-video/youtube-edit-metadata.jpg'
+  alt='Chỉnh sửa nội dung video trên phiên bản web'
+  className='rounded-lg'
+/>
+
+## Đăng tải video lên YouTube trên phiên bản máy tính (PC)
+
+Để đăng tải video lên YouTube trên phiên bản máy tính (PC), bạn cần phải làm những việc sau:
+
+1. Cài đặt _Google Chrome Beta_
+2. Thiết lập _Google Profile_ trên _Chrome Beta_. Profile này tương ứng với tài khoản YouTube Studio của bạn
+3. Bắt đầu đăng tải video lên YouTube
+
+| Tại sao lại phải cần Google Chrome Beta và Google Profile?
+| Google Chrome Beta cho phép Vipro thực thi việc giả lập người dùng để tự động chọn file video trên máy của bạn, tự động điền các nội dung cần thiết như Tiêu đề, Mô tả, Từ khóa, Hashtags, Thumbnail, và xuất bản video lên YouTube. Điều này giúp bạn chỉ cần 1 cái click chuột để hoàn thành việc đăng tải video lên YouTube, đồng thời, tăng được giới hạn số lượng video upload lên YouTube 1 ngày lên nhiều lần. Ngoài ra, nó cũng giúp bạn có thể cài đặt nhiều tài khoản YouTube khác nhau trên cùng 1 máy tính, giúp bạn quản lý kênh dễ dàng hơn, tiết kiệm tối đa thời gian chuyển đổi giữa các tài khoản và đăng tải video lên YouTube.
+
+### Cài đặt Google Chrome Beta
+
+- Cài đặt [Google Chrome Beta](https://www.google.com/chrome/beta) trên máy tính của bạn. Xem hướng dẫn cài đặt Chrome Beta qua video bên dưới
+
+<iframe
+  width='560'
+  height='315'
+  src='https://www.youtube.com/watch?v=Dkfen8hXF9c&list=PLYqqihZSxP622JWRCiGpGBWdeT3xO8pu2&index=8&ab_channel=Vipro'
+  title='YouTube video player'
+  frameborder='0'
+  allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share'
+  referrerpolicy='strict-origin-when-cross-origin'
+  allowfullscreen
+></iframe>
+
+### Thiết lập Google Profile trên Chrome Beta.
+
+Việc thiết lập Google Profile trên Chrome Beta cũng hoàn toàn tương tự thiết lập trên Google Chrome.
+
+1. Mở Google Chrome Beta
+2. Bấm vào hình đại diện (avatar) góc bên phải trên cùng
+3. Chọn `Add New Profile`
+4. Bấm `Sign In` để Đăng nhập vào tài khoản Google của bạn. Lưu ý là lựa chọn tài khoản Google gắn với _YouTube Studio_
+5. Tiếp tục bấm `Next` hoặc `I'm in` cho tới khi hoàn thành việc thiết lập
+6. Mở [YouTube Studio](https://studio.youtube.com)
+
+<img
+  src='/images/usage/publish-video/youtube-profile.jpg'
+  alt='Thiết lập Google Profile trên Chrome Beta'
+  className='rounded-lg'
+/>
+
+### Xác minh lại các bước cài đặt trên Vipro Studio PC
+
+Sau khi đã thiết lập xong Google Profile trên Chrome Beta, trên tab `Youtube` của Vipro Studio, hồ sơ Chrome Beta sẽ xuất hiện cho phép bạn lựa chọn.
+
+<img
+  src='/images/usage/publish-video/youtube-profile-selected.jpg'
+  alt='Xác minh lại các bước cài đặt trên Vipro Studio PC'
+  className='rounded-lg'
+/>
+
+## Tải lên YouTube
+
+Bấm nút `Tải Lên` ở dưới cùng để bắt đầu tải video lên YouTube. Vipro sẽ tự động giả lập người dùng để tải và xuất bản video của bạn lên YouTube
+
+<img
+  src='/images/usage/publish-video/upload-video.jpg'
+  alt='Tải lên YouTube'
+  className='rounded-lg'
+/>
