--- a/usage/publish-video/publish-tiktok.mdx
+++ b/usage/publish-video/publish-tiktok.mdx
@@ -2,3 +2,82 @@
 title: Đăng video lên TikTok
 description: "Hướng dẫn đăng tải video lên TikTok với Vipro Studio"
 ---
+
+Tương tự như YouTube, để đăng tải lên TikTok, bạn cần phải xuất video trước. Xem hướng dẫn xuất video tại [đây](/usage/publish-video/export-video)
+
+Các bước để đăng tải video lên TikTok:
+
+1. Xuất video
+2. Liên kết tài khoản TikTok
+3. Chỉnh sửa nội dung đăng tải (Tiêu đề, chế độ hiển thị...)
+4. Đăng tải video
+
+## Liên kết tài khoản TikTok
+
+Tại màn hình Xuất và Đăng tải, mở tab `TikTok`, bấm vào nút _Đăng nhập vào TikTok_ để bắt đầu. Nếu như bạn đã liên kết tài khoản TikTok trước đó, bạn có thể bỏ qua bước này.
+
+<img
+  src='/images/usage/publish-video/tiktok-login.jpg'
+  alt='Đăng nhập vào TikTok'
+  className='rounded-lg'
+/>
+
+Bạn sẽ được điều hướng lên website của TikTok trên trình duyệt. Tại đây, đăng nhập tài khoản TikTok nếu cần, sau đó bấm vào _Tiếp Tục_ để thực hiện việc liên kết tài khoản.
+
+<img
+  src='/images/usage/publish-video/tiktok-login-success.jpg'
+  alt='Đăng nhập vào TikTok'
+  className='rounded-lg'
+/>
+
+1 cửa sổ hiện lên hỏi bạn có mở app hay không, bấm vào _Open Vipro_ để mở app. Có thể tích vào ô `Always allow vipro.studio to open links of this type...` để không bị hỏi lại mỗi lần đăng nhập.
+
+<img
+  src='/images/usage/publish-video/tiktok-login-open-app.jpg'
+  alt='Mở app TikTok'
+  className='rounded-lg'
+/>
+
+Sau khi app được mở lại, thông tin tài khoản TikTok của bạn cũng như các nội dung của TikTok video sẽ được hiển thị ở tab `TikTok`. Thông tin tài khoản của bạn bao gồm:
+
+- Tên người dùng
+- Avatar
+- Giới hạn tối đa độ dài 1 video mà bạn được tải lên.
+
+Bạn có thể lựa chọn `Đổi tài khoản` để đăng nhập vào tài khoản TikTok khác.
+
+<img
+  src='/images/usage/publish-video/tiktok-account-info.jpg'
+  alt='Thông tin tài khoản TikTok'
+  className='rounded-lg'
+/>
+
+## Chỉnh sửa nội dung đăng tải
+
+Bạn có thể điều chỉnh nội dung đăng tải đã được Vipro AI sinh ra sẵn, bao gồm:
+
+- Caption của video
+- Chế độ hiển thị
+- Bật tắt Bình luận, Duet, Stitch
+- Bật tắt loại video quảng cáo hoặc video thường
+
+## Đăng tải video
+
+Bạn có thể bấm vào nút `Đăng tải video` để bắt đầu đăng tải video lên TikTok. Đối với phiên bản web, video của bạn sẽ được tải lên ngầm trên máy chủ của chúng tôi tới TikTok. Còn đối với phiên bản máy tính (PC), video sẽ được tải lên trực tiếp từ máy của bạn.
+
+<img
+  src='/images/usage/publish-video/tiktok-publish-video.jpg'
+  alt='Đăng tải video lên TikTok'
+  className='rounded-lg'
+/>
+
+Sau khi video được đăng tải, màn hình TikTok sẽ hiển thị thông tin của video đã tải lên, bao gồm:
+
+- Video preview.
+- Đường dẫn tới TikTok Studio của bạn, để bạn có thể xem video đã đăng tải trên kênh của mình.
+
+<img
+  src='/images/usage/publish-video/tiktok-publish-video-success.jpg'
+  alt='Xem video đã đăng tải'
+  className='rounded-lg'
+/>
