--- a/usage/publish-video/publish-youtube.mdx
+++ b/usage/publish-video/publish-youtube.mdx
@@ -40,14 +40,11 @@ Nếu muốn bạn vẫn có thể điều chỉnh lại các nội dung này, b
 - Cài đặt [Google Chrome Beta](https://www.google.com/chrome/beta) trên máy tính của bạn. Xem hướng dẫn cài đặt Chrome Beta qua video bên dưới
 
 <iframe
-  width='560'
-  height='315'
-  src='https://www.youtube.com/watch?v=Dkfen8hXF9c&list=PLYqqihZSxP622JWRCiGpGBWdeT3xO8pu2&index=8&ab_channel=Vipro'
-  title='YouTube video player'
-  frameborder='0'
-  allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share'
-  referrerpolicy='strict-origin-when-cross-origin'
-  allowfullscreen
+  src='https://www.youtube.com/embed/Dkfen8hXF9c'
+  width='100%'
+  height='400'
+  frameBorder='0'
+  allowFullScreen
 ></iframe>
 
 ### Thiết lập Google Profile trên Chrome Beta.
@@ -86,3 +83,10 @@ Bấm nút `Tải Lên` ở dưới cùng để bắt đầu tải video lên Yo
   alt='Tải lên YouTube'
   className='rounded-lg'
 />
+
+## Xem video đã đăng tải
+
+Sau khi video được đăng tải, màn hình YouTube sẽ hiển thị thông tin của video đã tải lên, bao gồm:
+
+- Video embed. Bạn có thể xem trực tiếp video tại đây nếu video không phải là private.
+- Đường dẫn của video.
