--- a/usage/publish-video/publish-youtube.mdx
+++ b/usage/publish-video/publish-youtube.mdx
@@ -28,8 +28,8 @@ Nếu muốn bạn vẫn có thể điều chỉnh lại các nội dung này, b
 
 Để đăng tải video lên YouTube trên phiên bản máy tính (PC), bạn cần phải làm những việc sau:
 
-1. Cài đặt _Google Chrome Beta_
-2. Thiết lập _Google Profile_ trên _Chrome Beta_. Profile này tương ứng với tài khoản YouTube Studio của bạn
+1. Cài đặt **Google Chrome Beta**
+2. Thiết lập **Google Profile** trên **Chrome Beta**. Profile này tương ứng với tài khoản YouTube Studio của bạn
 3. Bắt đầu đăng tải video lên YouTube
 
 | Tại sao lại phải cần Google Chrome Beta và Google Profile?
@@ -54,7 +54,7 @@ Việc thiết lập Google Profile trên Chrome Beta cũng hoàn toàn tương 
 1. Mở Google Chrome Beta
 2. Bấm vào hình đại diện (avatar) góc bên phải trên cùng
 3. Chọn `Add New Profile`
-4. Bấm `Sign In` để Đăng nhập vào tài khoản Google của bạn. Lưu ý là lựa chọn tài khoản Google gắn với _YouTube Studio_
+4. Bấm `Sign In` để Đăng nhập vào tài khoản Google của bạn. Lưu ý là lựa chọn tài khoản Google gắn với **YouTube Studio**
 5. Tiếp tục bấm `Next` hoặc `I'm in` cho tới khi hoàn thành việc thiết lập
 6. Mở [YouTube Studio](https://studio.youtube.com)
 
