--- a/usage/video-editor/edit-watermark.mdx
+++ b/usage/video-editor/edit-watermark.mdx
@@ -50,6 +50,18 @@ Bạn có thể sử dụng các công cụ như [Canva](https://www.canva.com/s
 
 Bấm vào nút Tải lên để tải lên video mở đầu hoặc kết thúc. Video tải lên không được quá 10MB.
 
+## Tùy chỉnh ảnh bìa (Thumbnail)
+
+Bạn có thể tùy chỉnh ảnh bìa (Thumbnail) ngay tại đây bằng cách bấm vào nút chỉnh sửa ở phần Ảnh bìa.
+
+Bấm vào nút tắt bật `Nhúng ảnh bìa vào video` để đặt ảnh bìa vào 1 giây đầu tiên của video. Điều này giúp tăng nhận diện của video, và khi tải video lên Tiktok, Tiktok sẽ tự động nhận diện ảnh bìa của video của bạn.
+
+<img
+  src='/images/usage/video-editor/watermark-thumbnail.jpg'
+  alt='Chọn ảnh bìa (Thumbnail)'
+  className='rounded-lg'
+/>
+
 ## Lưu ý
 
 Những lựa chọn cài đặt cho thông tin thương hiệu của bạn sẽ được lưu tự động vào mẫu video mà bạn đã chọn ở bước đầu tiên khi tạo video. Nếu bạn tạo 1 video khác cũng lựa chọn mẫu video này, phần cài đặt này sẽ được lấy mặc định theo video gần nhất bạn đã tạo.
