--- a/usage/video-editor/video-info.mdx
+++ b/usage/video-editor/video-info.mdx
@@ -5,7 +5,11 @@ description: ""
 
 Để xem thông tin từng phân cảnh trong Vipro, bạn bấm vào biểu tượng hình chữ i trên thanh Công Cụ Bên tay trái. Trong hình ảnh dưới đây, biểu tượng này được đánh số 1
 
-<img src="/images/usage/video-editor/video-info.jpeg" alt="Vipro Studio trên web" className="rounded-lg" />
+<img
+  src='/images/usage/video-editor/video-info.jpeg'
+  alt='Vipro Studio trên web'
+  className='rounded-lg'
+/>
 
 Tại màn hình chi tiết này, bạn có thể
 
@@ -15,4 +19,23 @@ Tại màn hình chi tiết này, bạn có thể
 
 Sau khi bạn bấm vào chi tiết một chương, Vipro sẽ hiển thị ảnh đại diện cho mỗi phân cảnh, cũng như nội dung cốt chuyện của phân cảnh đó.
 
-<img src="/images/usage/video-editor/chapter-screens.jpeg" alt="Vipro Studio trên web" className="rounded-lg" />
+<img
+  src='/images/usage/video-editor/chapter-screens.jpeg'
+  alt='Vipro Studio trên web'
+  className='rounded-lg'
+/>
+
+## Thay đổi tốc độ phát của video
+
+Thay đổi tốc độ phát của video để điều chỉnh thời lượng video. Ví dụ, video YouTube Shorts hoặc TikTok nên có thời lượng <= 180s, và tốt nhất là <= 60s. Thay đổi này giúp cho bạn cũng có thể tăng hoặc giảm tiết tấu của video tùy theo ý thích.
+
+Để thay đổi, bạn có 2 cách:
+
+- Kéo thanh tốc độ để điều chỉnh
+- Hoặc kéo thanh thời lượng để chỉnh thời gian video. Thanh tốc độ sẽ thay đổi theo tương ứng
+
+<img
+  src='/images/usage/video-editor/info-speed.jpg'
+  alt='Vipro Studio trên web'
+  className='rounded-lg'
+/>
