--- a/usage/video-editor/edit-background-music.mdx
+++ b/usage/video-editor/edit-background-music.mdx
@@ -44,6 +44,30 @@ Ngoài ra, bạn có thể tải lên nhạc nền tùy chỉnh bằng cách:
   className='rounded-lg'
 />
 
+## Tinh chỉnh âm thanh hiệu ứng
+
+Mở tab `Hiệu ứng` trong mục `Nhạc` để tinh chỉnh âm thanh hiệu ứng.
+Tại đây bạn có thể lựa chọn 1 âm thanh hiệu ứng bất kỳ để thêm vào video của mình. Ví dụ, khi vào cảnh dồn dập, bạn có thể lựa chọn hiệu ứng âm thanh `Tim đập nhanh (Heartbeat)` để tăng thêm chất lượng cho video.
+
+<img
+  src='/images/usage/video-editor/background-music-effect.jpg'
+  alt='Tinh chỉnh hiệu ứng'
+  className='rounded-lg'
+/>
+
+Bạn có thể lựa chọn bộ lọc, hoặc tải lên file trên máy tính của bạn tương tự như trong phần Nhạc nền.
+Bấm vào nút `+` để thêm hiệu ứng đó vào video, bấm nút Play để nghe thử hiệu ứng đó.
+
+Sau khi thêm hiệu ứng đó vào video, bạn có thể bỏ chọn hiệu ứng đó bằng cách bấm nút `-`. Và để điều chỉnh thời gian bắt đầu, tốc độ phát, âm lượng của hiệu ứng, hãy bấm vào các nút tương ứng ở phần bên dưới của mỗi hiệu ứng đã chọn.
+
+<img
+  src='/images/usage/video-editor/background-music-effect-edit.jpg'
+  alt='Xoa hiệu ứng'
+  className='rounded-lg'
+/>
+
+Mẹo nhỏ: Bạn có thể tua video hoặc chọn 1 phân cảnh trước, sau đó thêm hiệu ứng, thì thời gian bắt đầu của hiệu ứng sẽ tự động được lấy theo thời gian của video tại thời điểm đó.
+
 ## Lưu ý
 
 Những lựa chọn cài đặt cho nhạc nền của bạn sẽ được lưu tự động vào mẫu video mà bạn đã chọn ở bước đầu tiên khi tạo video. Nếu bạn tạo 1 video khác cũng lựa chọn mẫu video này, phần cài đặt này sẽ được lấy mặc định theo video gần nhất bạn đã tạo.
