--- a/usage/video-editor/video-info.mdx
+++ b/usage/video-editor/video-info.mdx
@@ -25,6 +25,14 @@ Sau khi bạn bấm vào chi tiết một chương, Vipro sẽ hiển thị ản
   className='rounded-lg'
 />
 
+- Bạn cũng có thể di chuyển chuột vào nội dung từng phân cảnh, bấm nút Edit để chỉnh sửa lại nội dung đó, sau đó bấm `Cập nhật` để cập nhật nội dung. Lưu ý rằng khi thay đổi nội dung, Vipro sẽ sinh lại Voice over và sẽ phát sinh thêm chi phí.
+
+<img
+  src='/images/usage/video-editor/modify-scene.jpg'
+  alt='Vipro Studio trên web'
+  className='rounded-lg'
+/>
+
 ## Thay đổi tốc độ phát của video
 
 Thay đổi tốc độ phát của video để điều chỉnh thời lượng video. Ví dụ, video YouTube Shorts hoặc TikTok nên có thời lượng <= 180s, và tốt nhất là <= 60s. Thay đổi này giúp cho bạn cũng có thể tăng hoặc giảm tiết tấu của video tùy theo ý thích.
