update doc for 1.3

--- a/usage/create-content/review-configuration.mdx
+++ b/usage/create-content/review-configuration.mdx
@@ -41,3 +41,52 @@ Ngoài ra Vipro Studio cũng cho bạn thêm một lựa chọn để bạn có 
 - Bạn có thể review lại hình ảnh của nhân vật. Việc này sẽ rất có ích nếu bạn sử dụng _Midjourney_ để tạo hình ảnh cho phân cảnh. Midjourney sẽ tạo được hình ảnh có nhân vật với độ tương đồng rất cao
 
 Sau khi hoàn tất bước này, bạn có thể ấn vào nút **Lưu** để Vipro Studio bắt đầu bước chia phân cảnh nhé.
+
+### Chức năng nâng cao cho image prompt từ phiên bản _1.3_
+
+Từ phiên bản _1.3_, Vipro Studio đã cung cấp cho bạn một chức năng nâng cao cho image prompt.
+
+<img
+  src="/images/usage/create-content/advanced-image-prompt.jpg"
+  alt="Advanced Image Prompt UI"
+  className="rounded-lg"
+/>
+
+1. **Smart Prompt**:
+
+Ý nghĩa của Smart Prompt:
+
+- Bạn nhập prompt bằng tiếng Việt và Vipro Studio sẽ giúp bạn chuyển nó thành tiếng Anh phù hợp
+- Bạn có thể dùng `@` để cho Vipro biết phân cảnh đó có nhân vật nào
+
+Cách bật chức năng này:
+
+- Bạn chỉ cần tick chọn vào ô **Bật tính năng Smart Prompt** trong khi lựa chọn phong cách hình ảnh là được
+
+2. **Kiểm duyệt nhân vật nâng cao**:
+
+Ý nghĩa của kiểm duyệt nhân vật nâng cao:
+
+- Trước khi tạo nhân vật, bạn có thể yêu cầu Vipro cho bạn biết nhân vật đó thuộc
+  - thời đại nào
+  - sắc tộc nào
+- Bạn cũng có thể sử dụng lại nhân vật của video cũ của bạn. Điều này giúp bạn có được nhiều video với cùng một hệ thống nhân vật
+
+Cách bật chức năng này:
+
+<img
+  src="/images/usage/create-content/reuse-characters.jpg"
+  alt="Reuse Characters UI"
+  className="rounded-lg"
+/>
+
+- Bước 1: Bạn cần tick chọn vào ô **kiểm duyệt nhân vật** khi lựa chọn phong cách hình ảnh
+- Bước 2: Sau đó ấn vào nút **nâng cao** ở góc phải màn hình
+- Bước 3-4: Chọn thời đại và sắc tộc của nhân vật trong video
+- Bước 5-6: Search video cũ của bạn nếu bạn muốn sử dụng lại nhân vật của video cũ. Bạn có thể bỏ qua bước này.
+
+Như trong hình ảnh ví dụ, chúng tôi đã chọn
+
+- Thời hiện đại
+- Người châu á
+- Dùng lại nhân vật trong video "5 bí quyết từ Đắc Nhân Tâm"
