--- a/usage/video-editor/edit-scene/image.mdx
+++ b/usage/video-editor/edit-scene/image.mdx
@@ -44,3 +44,23 @@ Lưu ý là ảnh Stock chỉ phù hợp với các nội dung người thật, 
   alt="Sử dụng ảnh từ máy tính"
   className="rounded-lg"
 />
+
+### Chức năng Smart Prompt
+
+Như đã đề cập ở phần trước, Từ phiên bản _1.3_, Vipro Studio đã đưa thêm chức năng smart prompt để bạn có thể dễ dàng chỉnh sửa image prompt bằng tiếng Việt.
+
+<img
+  src="/images/usage/video-editor/scene-editor/image/smart-prompt.jpeg"
+  alt="Chức năng Smart Prompt"
+  className="rounded-lg"
+/>
+
+- Khi sử dụng prompt thông minh, bạn chỉ cần đưa ra yêu cầu bằng tiếng Việt, Vipro sẽ tự động chuyển đổi để tạo hình ảnh phù hợp
+- Bạn có thể sử dụng `@` để chỉ định nhân vật trong video. Ví dụ: `@James` sẽ được hình ảnh có nhân vật `James` mà bạn đã tạo khi kiểm duyệt nhân vật
+- Bạn có thể dễ dàng chuyển đổi từ prompt thông minh sang prompt truyền thống bằng cách ấn vào công tắc ở góc phải
+
+<img
+  src="/images/usage/video-editor/scene-editor/image/toggle-smart-prompt.jpeg"
+  alt="Chuyển đổi prompt"
+  className="rounded-lg"
+/>
