--- a/en/usage/video-editor/edit-scene/video.mdx
+++ b/en/usage/video-editor/edit-scene/video.mdx
@@ -1,92 +1,92 @@
 ---
-title: Chỉnh sửa hình ảnh động
-description: "Hướng dẫn chỉnh sửa hình ảnh động với Vipro Studio"
+title: Edit Animated Images
+description: "Guide to editing animated images with Vipro Studio"
 ---
 
-Ngoài việc chỉnh sửa phân cảnh bằng cách thay đổi ảnh tĩnh, bạn cũng có thể sử dụng trình chỉnh sửa của Vipro Studio để thêm ảnh động/video cho mỗi phân cảnh.
+Besides editing scenes by changing static images, you can also use Vipro Studio's editor to add animations/videos to each scene.
 
-Giống như ảnh tĩnh, bạn cũng có 3 lựa chọn cho ảnh động: **dùng AI**, **Video Stock** và **tải lên từ máy tính**.
-
-<img
-  src="/images/usage/video-editor/scene-editor/video/edit-scene-1.jpeg"
-  alt="Thay ảnh tĩnh bằng Video"
-  className="rounded-lg"
-/>
-
-### Tạo video bằng AI
-
-Để tạo được video, bạn cần chọn tab `AI` ở trên trình chỉnh sửa. Với mỗi phân cảnh bạn sẽ có:
+Like static images, you also have 3 options for animated images: **use AI**, **Stock Video** and **upload from computer**.
 
 <img
-  src="/images/usage/video-editor/scene-editor/video/edit-scene-prompt.jpeg"
-  alt="Thay ảnh tĩnh bằng Video"
-  className="rounded-lg"
+  src='/en/images/usage/video-editor/scene-editor/video/edit-scene-1.jpeg'
+  alt='Replace static image with Video'
+  className='rounded-lg'
 />
 
-- Ảnh gốc: Ảnh mà bạn đang sử dụng ở phân cảnh hiện tại. Nếu bạn lựa chọn tạo video từ stock với **Khởi tạo nhanh** thì phân cảnh này sẽ không có ảnh gốc
-- Dịch vụ AI: Dịch vụ tương ứng để làm ảnh động
-- Prompt tạo video: Thông tin chỉ dẫn để tạo ảnh động
+### Create Videos with AI
 
-Sau khi bạn đã kiểm tra lại tất cả các thông tin trên, bạn có thể bấm **Tạo video** để bắt đầu tạo hình động cho phân cảnh đang chọn. Việc tạo hình động sẽ mất khá nhiều thời gian,
-tuỳ vào dịch vụ mà bạn lựa chọn, thời gian tạo hình động có thể mất từ 40 giây đến 6 phút.
+To create a video, you need to select the `AI` tab in the editor. For each scene you will have:
 
-**Chú ý**: Tạo hình động bằng AI là dịch vụ sử dụng kim cương đỏ. Mỗi lần tạo video, Vipro sẽ tự động trừ kim cương từ tài khoản của bạn. Giá và thời gian tạo video của từng dịch vụ như sau:
+<img
+  src='/en/images/usage/video-editor/scene-editor/video/edit-scene-prompt.jpeg'
+  alt='Replace static image with Video'
+  className='rounded-lg'
+/>
 
-| Dịch vụ AI     | Kiểu video     | Thời gian tạo video | Giá (kim cương đỏ) |
-| -------------- | -------------- | ------------------- | ------------------ |
-| Luma AI        | image to video | 40 giây             | 10                 |
-|                | text to video  | 40 giây             | 10                 |
-| Kling Standard | image to video | 5 phút              | 5                  |
-|                | text to video  | 5 phút              | 5                  |
-| Kling Pro      | image to video | 6 phút              | 15                 |
-|                | text to video  | 6 phút              | 15                 |
-| Hunyuan AI     | text to video  | 60 giây             | 10                 |
-| Hailuo Minimax | image to video | 4 phút              | 10                 |
+- Original Image: The image you are currently using in the current scene. If you choose to create video from stock with **Quick Start**, this scene will not have an original image
+- AI Service: The corresponding service to create animation
+- Video Prompt: Instructions for creating animation
 
-- **image to video**: Tạo video từ ảnh.
-- **text to video**: Tạo video từ text.
+After you have reviewed all the above information, you can click **Create Video** to start creating animation for the selected scene. Creating animation takes quite a long time,
+depending on the service you choose, animation creation time can take from 40 seconds to 6 minutes.
 
-Bạn có thể xem hướng dẫn chi tiết về cách tạo hình động với Vipro Studio tại đây:
+**Note**: Creating animation with AI is a service that uses red diamonds. Each time you create a video, Vipro will automatically deduct diamonds from your account. The price and video creation time for each service are as follows:
+
+| AI Service     | Video Type     | Creation Time | Price (red diamonds) |
+| -------------- | -------------- | ------------- | -------------------- |
+| Luma AI        | image to video | 40 seconds    | 10                   |
+|                | text to video  | 40 seconds    | 10                   |
+| Kling Standard | image to video | 5 minutes     | 5                    |
+|                | text to video  | 5 minutes     | 5                    |
+| Kling Pro      | image to video | 6 minutes     | 15                   |
+|                | text to video  | 6 minutes     | 15                   |
+| Hunyuan AI     | text to video  | 60 seconds    | 10                   |
+| Hailuo Minimax | image to video | 4 minutes     | 10                   |
+
+- **image to video**: Create video from image.
+- **text to video**: Create video from text.
+
+You can view detailed instructions on how to create animations with Vipro Studio here:
 
 <iframe
-  src="https://www.youtube.com/embed/0ahWoEOXQ3U?si=42xc8y9OXlo5cY-1"
-  width="100%"
-  height="400"
-  frameBorder="0"
+  src='https://www.youtube.com/embed/0ahWoEOXQ3U?si=42xc8y9OXlo5cY-1'
+  width='100%'
+  height='400'
+  frameBorder='0'
   allowFullScreen
 ></iframe>
 
-### Video stock
+### Stock Video
 
-Giống như ảnh tĩnh, bạn có thể sử dụng trình sửa ảnh của Vipro để tìm kiếm stock video.
-
-<img
-  src="/images/usage/video-editor/scene-editor/video/edit-scene-stock.jpeg"
-  alt="Tìm kiếm video stock"
-  className="rounded-lg"
-/>
-
-Để bắt đầu tìm kiếm video hãy làm theo các bước sau:
-
-1. Chọn tab **Stock**
-2. Nhập nội dung tìm kiếm vào ô nội dung tìm kiếm
-3. Bấm **Tìm kiếm video miễn phí** để bắt đầu tìm kiếm
-4. Chọn 1 video mà bạn thấy phù hợp nhất
-5. Bấm **Hoàn thành** để hoàn tất
-
-### Tải lên từ máy tính
-
-Ngoài AI video và Stock video, bạn cũng có thể upload video từ máy tính của mình.
+Like static images, you can use Vipro's image editor to search for stock videos.
 
 <img
-  src="/images/usage/video-editor/scene-editor/video/edit-scene-upload.jpeg"
-  alt="Upload video từ máy tính"
-  className="rounded-lg"
+  src='/en/images/usage/video-editor/scene-editor/video/edit-scene-stock.jpeg'
+  alt='Search stock video'
+  className='rounded-lg'
 />
 
-Để upload video, hãy làm theo các bước sau:
+To start searching for videos, follow these steps:
 
-1. Chọn tab **Tải lên**
-2. Upload video mà bạn đã chuẩn bị trước trên máy tính của mình
-3. Bấm **Tải lên video** để upload video lên Vipro
-4. Bấm **Hoàn thành** để hoàn tất
+1. Select the **Stock** tab
+2. Enter search content in the search content field
+3. Click **Search Free Videos** to start searching
+4. Select a video that you find most suitable
+5. Click **Done** to complete
+
+### Upload from Computer
+
+Besides AI video and Stock video, you can also upload videos from your computer.
+
+<img
+  src='/en/images/usage/video-editor/scene-editor/video/edit-scene-upload.jpeg'
+  alt='Upload video from computer'
+  className='rounded-lg'
+/>
+
+To upload a video, follow these steps:
+
+1. Select the **Upload** tab
+2. Upload the video you have prepared on your computer
+3. Click **Upload Video** to upload the video to Vipro
+4. Click **Done** to complete
