--- a/vi/usage/publish-video/export-video.mdx
+++ b/vi/usage/publish-video/export-video.mdx
@@ -6,7 +6,7 @@ description: "Hướng dẫn xuất video với Vipro Studio"
 Để vào màn hình xuất video, bấm vào nút `Xuất & Tải lên` góc góc phải trên cùng của Vipro Studio.
 
 <img
-  src="/vi/images/usage/publish-video/export-video.jpg'
+  src='/vi/images/usage/publish-video/export-video.jpg'
   alt='Xuất video'
   className='rounded-lg'
 />
@@ -22,7 +22,7 @@ description: "Hướng dẫn xuất video với Vipro Studio"
 - Bạn có thể chỉnh sửa lại video bằng cách bấm vào nút `Chỉnh sửa lại video` ở bên dưới.
 
 <img
-  src="/vi/images/usage/publish-video/export-video-edit.jpg'
+  src='/vi/images/usage/publish-video/export-video-edit.jpg'
   alt='Chỉnh sửa lại video'
   className='rounded-lg'
 />
