--- a/vi/usage/publish-video/publish-youtube.mdx
+++ b/vi/usage/publish-video/publish-youtube.mdx
@@ -19,7 +19,7 @@ Nếu muốn bạn vẫn có thể điều chỉnh lại các nội dung này, b
 Đọc hướng dẫn chỉnh sửa Thumbnail [tại đây](/usage/edit-video/thumbnail-editor)
 
 <img
-  src="/vi/images/usage/publish-video/youtube-edit-metadata.jpg'
+  src='/vi/images/usage/publish-video/youtube-edit-metadata.jpg'
   alt='Chỉnh sửa nội dung video trên phiên bản web'
   className='rounded-lg'
 />
@@ -59,7 +59,7 @@ Việc thiết lập Google Profile trên Chrome Beta cũng hoàn toàn tương 
 6. Mở [YouTube Studio](https://studio.youtube.com)
 
 <img
-  src="/vi/images/usage/publish-video/youtube-profile.jpg'
+  src='/vi/images/usage/publish-video/youtube-profile.jpg'
   alt='Thiết lập Google Profile trên Chrome Beta'
   className='rounded-lg'
 />
@@ -69,7 +69,7 @@ Việc thiết lập Google Profile trên Chrome Beta cũng hoàn toàn tương 
 Sau khi đã thiết lập xong Google Profile trên Chrome Beta, trên tab `Youtube` của Vipro Studio, hồ sơ Chrome Beta sẽ xuất hiện cho phép bạn lựa chọn.
 
 <img
-  src="/vi/images/usage/publish-video/youtube-profile-selected.jpg'
+  src='/vi/images/usage/publish-video/youtube-profile-selected.jpg'
   alt='Xác minh lại các bước cài đặt trên Vipro Studio PC'
   className='rounded-lg'
 />
@@ -79,7 +79,7 @@ Sau khi đã thiết lập xong Google Profile trên Chrome Beta, trên tab `You
 Bấm nút `Tải Lên` ở dưới cùng để bắt đầu tải video lên YouTube. Vipro sẽ tự động giả lập người dùng để tải và xuất bản video của bạn lên YouTube
 
 <img
-  src="/vi/images/usage/publish-video/upload-video.jpg'
+  src='/vi/images/usage/publish-video/upload-video.jpg'
   alt='Tải lên YouTube'
   className='rounded-lg'
 />
