--- a/vi/usage/video-editor/edit-background-music.mdx
+++ b/vi/usage/video-editor/edit-background-music.mdx
@@ -6,7 +6,7 @@ description: "Hướng dẫn chỉnh sửa nhạc nền với Vipro Studio"
 Bạn có thể lựa chọn để tinh chỉnh nhạc nền của video bằng cách bấm vào nút có biểu tượng music ở menu bên trái của màn hình.
 
 <img
-  src="/vi/images/usage/video-editor/background-music.jpg'
+  src='/vi/images/usage/video-editor/background-music.jpg'
   alt='Chọn nhạc nền'
   className='rounded-lg'
 />
@@ -20,7 +20,7 @@ Tại đây, bạn có thể lựa chọn một nhạc nền bất kỳ cho vide
 Sau khi chọn một nhạc nền, nhạc được chọn sẽ thể hiện ở trên đầu của màn hình.
 
 <img
-  src="/vi/images/usage/video-editor/background-music-selected.jpg'
+  src='/vi/images/usage/video-editor/background-music-selected.jpg'
   alt='Nhạc nền đã chọn'
   className='rounded-lg'
 />
@@ -31,7 +31,7 @@ Ngoài ra, bạn có thể tải lên nhạc nền tùy chỉnh bằng cách:
 2. Chọn file nhạc từ máy tính của bạn
 
 <img
-  src="/vi/images/usage/video-editor/background-music-add.jpg'
+  src='/vi/images/usage/video-editor/background-music-add.jpg'
   alt='Thêm nhạc nền'
   className='rounded-lg'
 />
@@ -39,7 +39,7 @@ Ngoài ra, bạn có thể tải lên nhạc nền tùy chỉnh bằng cách:
 Để tìm kiếm nhạc nền phù hợp nhất, bạn có thể lọc danh sách nhạc theo các thể loại khác nhau.
 
 <img
-  src="/vi/images/usage/video-editor/background-music-filter.jpg'
+  src='/vi/images/usage/video-editor/background-music-filter.jpg'
   alt='Lọc nhạc nền'
   className='rounded-lg'
 />
@@ -50,7 +50,7 @@ Mở tab `Hiệu ứng` trong mục `Nhạc` để tinh chỉnh âm thanh hiệu
 Tại đây bạn có thể lựa chọn 1 âm thanh hiệu ứng bất kỳ để thêm vào video của mình. Ví dụ, khi vào cảnh dồn dập, bạn có thể lựa chọn hiệu ứng âm thanh `Tim đập nhanh (Heartbeat)` để tăng thêm chất lượng cho video.
 
 <img
-  src="/vi/images/usage/video-editor/background-music-effect.jpg'
+  src='/vi/images/usage/video-editor/background-music-effect.jpg'
   alt='Tinh chỉnh hiệu ứng'
   className='rounded-lg'
 />
@@ -61,7 +61,7 @@ Bấm vào nút `+` để thêm hiệu ứng đó vào video, bấm nút Play đ
 Sau khi thêm hiệu ứng đó vào video, bạn có thể bỏ chọn hiệu ứng đó bằng cách bấm nút `-`. Và để điều chỉnh thời gian bắt đầu, tốc độ phát, âm lượng của hiệu ứng, hãy bấm vào các nút tương ứng ở phần bên dưới của mỗi hiệu ứng đã chọn.
 
 <img
-  src="/vi/images/usage/video-editor/background-music-effect-edit.jpg'
+  src='/vi/images/usage/video-editor/background-music-effect-edit.jpg'
   alt='Xoa hiệu ứng'
   className='rounded-lg'
 />
