--- a/en/usage/video-editor/edit-scene/image.mdx
+++ b/en/usage/video-editor/edit-scene/image.mdx
@@ -1,66 +1,66 @@
 ---
-title: Chỉnh sửa hình ảnh tĩnh
-description: "Hướng dẫn chỉnh sửa hình ảnh tĩnh với Vipro Studio"
+title: Edit Static Images
+description: "Guide to editing static images with Vipro Studio"
 ---
 
-Có 2 cách để chỉnh sửa phân cảnh trong Vipro. Khi bạn di chuột lên phân cảnh bạn muốn chỉnh sửa, 2 tùy chọn sẽ hiển thị ra: 1 là `Chỉnh sửa phân cảnh`, 2 là `Tạo lại nhanh hình ảnh`.
+There are 2 ways to edit a scene in Vipro. When you hover over the scene you want to edit, 2 options will appear: 1 is `Edit Scene`, 2 is `Quick Regenerate Image`.
 
-## Cách 1: Chỉnh sửa phân cảnh nhanh
+## Method 1: Quick Scene Edit
 
-Bấm vào nút `Tạo lại nhanh hình ảnh` để tạo lại hình ảnh. Đôi khi, hình ảnh của AI tạo ra không được như ý, hoặc là bị lỗi, thì đây là cách nhanh nhất để bạn có thể tạo lại hình ảnh.
+Click the `Quick Regenerate Image` button to regenerate the image. Sometimes, when the AI-generated image isn't satisfactory or has errors, this is the quickest way to regenerate the image.
 
 <img
-  src="/images/usage/video-editor/scene-editor/image/edit-scene-1.jpg"
-  alt="Tạo lại nhanh hình ảnh"
-  className="rounded-lg"
+  src='/en/images/usage/video-editor/scene-editor/image/edit-scene-1.jpg'
+  alt='Quick regenerate image'
+  className='rounded-lg'
 />
 
-## Cách 2: Chỉnh sửa phân cảnh chi tiết
+## Method 2: Detailed Scene Edit
 
-Bấm vào nút `Chỉnh sửa phân cảnh` để chỉnh sửa phân cảnh chi tiết hơn. Tại đây bạn có rất nhiều lựa chọn để tạo lại hình ảnh:
+Click the `Edit Scene` button for more detailed scene editing. Here you have many options to regenerate images:
 
-- Tạo lại hình ảnh bằng AI: Bạn có thể điều chỉnh prompt để tạo hình ảnh theo ý muốn. Hiện tại prompt tạo ảnh chỉ hỗ trợ tiếng Anh. Thay đổi prompt và bấm `Tạo lại hình ảnh` để bắt đầu tạo lại.
+- Regenerate image with AI: You can adjust the prompt to create images as desired. Currently, image prompts only support English. Change the prompt and click `Regenerate Image` to start regenerating.
 
 <img
-  src="/images/usage/video-editor/scene-editor/image/edit-scene-prompt.jpg"
-  alt="Tạo lại hình ảnh bằng AI"
-  className="rounded-lg"
+  src='/en/images/usage/video-editor/scene-editor/image/edit-scene-prompt.jpg'
+  alt='Regenerate image with AI'
+  className='rounded-lg'
 />
 
-- Sử dụng ảnh Stock: Bạn có thể chọn ảnh Stock để sử dụng cho phân cảnh tại Tab `Stock` ở góc bên phải. Vipro AI sẽ tự động điền sẵn nội dung tìm kiếm cho bạn, hoặc bạn có thể tự điền nội dung tìm kiếm và bấm `Tìm kiếm` để tìm kiếm ảnh, sau đó chọn 1 ảnh ưng ý và bấm `Hoàn thành`.
+- Use Stock Images: You can select Stock images for the scene in the `Stock` Tab on the right corner. Vipro AI will automatically fill in the search content for you, or you can enter your own search content and click `Search` to find images, then select a desired image and click `Done`.
 
-Lưu ý là ảnh Stock chỉ phù hợp với các nội dung người thật, không phù hợp với các phong cách hình vẽ hoặc hoạt hình.
+Note that Stock images are only suitable for real-person content, not suitable for drawing or animation styles.
 
 <img
-  src="/images/usage/video-editor/scene-editor/image/edit-scene-stock.jpg"
-  alt="Sử dụng ảnh Stock"
-  className="rounded-lg"
+  src='/en/images/usage/video-editor/scene-editor/image/edit-scene-stock.jpg'
+  alt='Use Stock images'
+  className='rounded-lg'
 />
 
-- Sử dụng ảnh từ máy tính: Bạn có thể chọn ảnh từ máy tính để sử dụng cho phân cảnh tại Tab `Tải lên` ở góc bên phải. Sau đó kéo thả ảnh trên máy của bạn vào hoặc bấm nút để tải 1 ảnh từ máy tính của bạn lên. Bấm `Hoàn thành` để hoàn tất.
+- Use images from computer: You can select images from your computer for the scene in the `Upload` Tab on the right corner. Then drag and drop your images or click the button to upload an image from your computer. Click `Done` to complete.
 
 <img
-  src="/images/usage/video-editor/scene-editor/image/edit-scene-upload.jpg"
-  alt="Sử dụng ảnh từ máy tính"
-  className="rounded-lg"
+  src='/en/images/usage/video-editor/scene-editor/image/edit-scene-upload.jpg'
+  alt='Use images from computer'
+  className='rounded-lg'
 />
 
-### Chức năng Smart Prompt
+### Smart Prompt Feature
 
-Như đã đề cập ở phần trước, Từ phiên bản _1.3_, Vipro Studio đã đưa thêm chức năng smart prompt để bạn có thể dễ dàng chỉnh sửa image prompt bằng tiếng Việt.
+As mentioned in the previous section, from version _1.3_, Vipro Studio has added the smart prompt feature to help you easily edit image prompts in Vietnamese.
 
 <img
-  src="/images/usage/video-editor/scene-editor/image/smart-prompt.jpeg"
-  alt="Chức năng Smart Prompt"
-  className="rounded-lg"
+  src='/en/images/usage/video-editor/scene-editor/image/smart-prompt.jpeg'
+  alt='Smart Prompt Feature'
+  className='rounded-lg'
 />
 
-- Khi sử dụng prompt thông minh, bạn chỉ cần đưa ra yêu cầu bằng tiếng Việt, Vipro sẽ tự động chuyển đổi để tạo hình ảnh phù hợp
-- Bạn có thể sử dụng `@` để chỉ định nhân vật trong video. Ví dụ: `@James` sẽ được hình ảnh có nhân vật `James` mà bạn đã tạo khi kiểm duyệt nhân vật
-- Bạn có thể dễ dàng chuyển đổi từ prompt thông minh sang prompt truyền thống bằng cách ấn vào công tắc ở góc phải
+- When using smart prompt, you only need to make requests in Vietnamese, Vipro will automatically convert to create appropriate images
+- You can use `@` to specify characters in the video. For example: `@James` will generate images with the `James` character that you created during character review
+- You can easily switch from smart prompt to traditional prompt by clicking the toggle in the right corner
 
 <img
-  src="/images/usage/video-editor/scene-editor/image/toggle-smart-prompt.jpeg"
-  alt="Chuyển đổi prompt"
-  className="rounded-lg"
+  src='/en/images/usage/video-editor/scene-editor/image/toggle-smart-prompt.jpeg'
+  alt='Toggle prompt'
+  className='rounded-lg'
 />
