--- a/en/usage/video-editor/video-info.mdx
+++ b/en/usage/video-editor/video-info.mdx
@@ -5,11 +5,7 @@ description: ""
 
 To view information about each scene in Vipro, click on the i icon on the left Toolbar. In the image below, this icon is numbered 1
 
-<img
-  src='/en/images/usage/video-editor/video-info.jpeg'
-  alt='Vipro Studio on web'
-  className='rounded-lg'
-/>
+<img src="/en/images/usage/video-editor/video-info.jpeg" alt="Vipro Studio on web" className="rounded-lg" />
 
 On this details screen, you can:
 
@@ -20,19 +16,13 @@ On this details screen, you can:
 
 After clicking on a chapter's details, Vipro will display a representative image for each scene, as well as the storyline content for that scene.
 
-<img
-  src='/en/images/usage/video-editor/chapter-screens.jpeg'
-  alt='Vipro Studio on web'
-  className='rounded-lg'
-/>
+<img src="/en/images/usage/video-editor/chapter-screens.jpeg" alt="Vipro Studio on web" className="rounded-lg" />
+
+## Edit the script of the video
 
 - You can also hover over each scene's content, click the Edit button to modify that content, then click `Update` to update the content. Note that when changing content, Vipro will regenerate the Voice over and additional costs will be incurred.
 
-<img
-  src='/en/images/usage/video-editor/modify-scene.jpg'
-  alt='Vipro Studio on web'
-  className='rounded-lg'
-/>
+<img src="/en/images/usage/video-editor/modify-scene.jpg" alt="Vipro Studio on web" className="rounded-lg" />
 
 ## Adjust Video Speed
 
@@ -43,8 +33,4 @@ You have two ways to make changes:
 - Drag the speed slider to adjust
 - Or drag the duration slider to adjust video time. The speed slider will change correspondingly
 
-<img
-  src='/en/images/usage/video-editor/info-speed.jpg'
-  alt='Vipro Studio on web'
-  className='rounded-lg'
-/>
+<img src="/en/images/usage/video-editor/info-speed.jpg" alt="Vipro Studio on web" className="rounded-lg" />
