update aff to 20%

--- a/en/partners/affiliate-program.mdx
+++ b/en/partners/affiliate-program.mdx
@@ -2,7 +2,7 @@
 title: Affiliate Program
 ---
 
-Vipro Studio offers an affiliate marketing program with an attractive 30% commission on each successful order.
+Vipro Studio offers an affiliate marketing program with an attractive 20% commission on each successful order.
 
 ## 1. Program Registration
 
@@ -11,40 +11,21 @@ Vipro Studio offers an affiliate marketing program with an attractive 30% commis
 
 If Vipro Web is displaying in English, click on the American flag icon in the left toolbar.
 
-<img
-  src='/en/images/partners/switch-language.jpeg'
-  alt='Vipro Studio on web'
-  className='rounded-lg'
-/>
+<img src="/en/images/partners/switch-language.jpeg" alt="Vipro Studio on web" className="rounded-lg" />
 
-<Warning>
-  The affiliate marketing program is only visible when you use Vietnamese
-  language.
-</Warning>
+<Warning>The affiliate marketing program is only visible when you use Vietnamese language.</Warning>
 
 3. Chat with us to register for the Affiliate Marketing Program.
 
 To chat with our Customer Service team, click on the chat icon in the Left Toolbar
 
-<img
-  src='/en/images/partners/chat-with-cs.jpeg'
-  alt='Vipro Studio on web'
-  className='rounded-lg'
-/>
+<img src="/en/images/partners/chat-with-cs.jpeg" alt="Vipro Studio on web" className="rounded-lg" />
 
 After clicking the chat icon, a chat window will open in the bottom right corner of the screen.
 
-<img
-  src='/en/images/partners/chat-window.jpeg'
-  alt='Vipro Studio on web'
-  className='rounded-lg'
-/>
+<img src="/en/images/partners/chat-window.jpeg" alt="Vipro Studio on web" className="rounded-lg" />
 
-<img
-  src='/en/images/partners/chat-window2.jpeg'
-  alt='Vipro Studio on web'
-  className='rounded-lg'
-/>
+<img src="/en/images/partners/chat-window2.jpeg" alt="Vipro Studio on web" className="rounded-lg" />
 
 Send a message with the content:
 
@@ -66,21 +47,13 @@ After approval, you can access the Affiliate Marketing management screen by:
 - Click on your avatar in the bottom left corner of the Toolbar, select Account, or visit https://app.vipro.studio/profile
 - Select Affiliate Marketing Management, or visit https://app.vipro.studio/affiliate
 
-<img
-  src='/en/images/partners/go-to-affiliate.jpeg'
-  alt='Vipro Studio on web'
-  className='rounded-lg'
-/>
+<img src="/en/images/partners/go-to-affiliate.jpeg" alt="Vipro Studio on web" className="rounded-lg" />
 
 ### 2.2. Getting Your Referral Code
 
 - After entering the Affiliate Marketing Management Screen, if your account has been approved, you will see your sharing code
 
-<img
-  src='/en/images/partners/get-affiliate-code.jpeg'
-  alt='Vipro Studio on web'
-  className='rounded-lg'
-/>
+<img src="/en/images/partners/get-affiliate-code.jpeg" alt="Vipro Studio on web" className="rounded-lg" />
 
 - Once you have your affiliate code, you can create sharing links in the format:
 
@@ -102,21 +75,13 @@ https://app.vipro.studio/profile/upgrade?ref=AFY67D
 
 - After creating your sharing link, you can test it by logging into Vipro with a different email and using your link `https://app.vipro.studio/profile/upgrade?ref=<affiliate-code>`. Vipro will open the payment screen with your affiliate code pre-filled
 
-<img
-  src='/en/images/partners/check-affiliate.jpeg'
-  alt='Vipro Studio on web'
-  className='rounded-lg'
-/>
+<img src="/en/images/partners/check-affiliate.jpeg" alt="Vipro Studio on web" className="rounded-lg" />
 
 ### 2.2. Performance Tracking
 
 - In the Affiliate Marketing Management screen, you can view details of orders purchased using your affiliate code, as well as check the commission for each order
 
-<img
-  src='/en/images/partners/check-affiliate-orders.jpeg'
-  alt='Vipro Studio on web'
-  className='rounded-lg'
-/>
+<img src="/en/images/partners/check-affiliate-orders.jpeg" alt="Vipro Studio on web" className="rounded-lg" />
 
 ## 3. Commission Payment
 
