remove % on aff

--- a/en/partners/affiliate-program.mdx
+++ b/en/partners/affiliate-program.mdx
@@ -2,7 +2,7 @@
 title: Affiliate Program
 ---
 
-Vipro Studio offers an affiliate marketing program with an attractive 20% commission on each successful order.
+Vipro Studio offers an affiliate marketing program with an attractive commission on each successful order.
 
 ## 1. Program Registration
 
