--- a/vi/partners/affiliate-program.mdx
+++ b/vi/partners/affiliate-program.mdx
@@ -2,7 +2,7 @@
 title: Chương trình affiliate
 ---
 
-Vipro Studio cung cấp chương trình tiếp thị liên kết (affiliate) với mức hoa hồng hấp dẫn 20% trên mỗi đơn hàng thành công.
+Vipro Studio cung cấp chương trình tiếp thị liên kết (affiliate) với mức hoa hồng hấp dẫn trên mỗi đơn hàng thành công.
 
 ## 1. Đăng ký chương trình
 
